Began implimentation of Mobile-First Responsive Design.

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Sprint Challenge - About</title>
 
@@ -86,12 +86,12 @@
         </div>
 
     <footer>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="#">About</a>
-        <a href="#">Products</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
+      <nav class="navbar">
+        <a class="navlink" href="index.html">Home</a>
+        <a class="navlink" href="#">About</a>
+        <a class="navlink" href="#">Products</a>
+        <a class="navlink" href="#">Blog</a>
+        <a class="navlink" href="#">Contact</a>
       </nav>
     </footer>    
   </div><!-- container -->  
