--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Sprint Challenge - Home</title>
 
@@ -75,7 +75,7 @@
         </section>
         
         <footer>
-            <nav>
+            <nav class="navbar">
                 <a class="navlink" href="#">Home</a>
                 <a class="navlink" href="about.html">About</a>
                 <a class="navlink" href="#">Products</a>
